@@ -32,6 +32,7 @@ remove = strict
 remove = warnings
 remove = base
 remove = Env
+remove = Carp
 remove = File::Spec
 
 [Prereqs / ConfigureRequires]
